[tool.poetry]
name = "keras-konverter"
version = "0.0.2"
description = "A tool to convert simple Keras models to pure Python + NumPy"
authors = ["Shane Smiskol <shane@smiskol.com>"]
license = "MIT"

packages = [
    { include = "konverter" }
]

[tool.poetry.dependencies]
python = "^3.6"  # 3.6 to 3.7 is okay
typer = "^0.1.1"
numpy = "^1.18.3"

[tool.poetry.dev-dependencies]
tensorflow = "2.0.0b0"
pytest = "^5.4.1"

[tool.poetry.scripts]
konverter = 'konverter.__main__:run'

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
